objects/Migration_Error_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Error__c</fullName>
        <label>Migration Error</label>
        <referenceTo>Migration_Error__c</referenceTo>
        <relationshipLabel>Migration Error Details</relationshipLabel>
        <relationshipName>Migration_Error_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Migration Error Detail</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Migration Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Error Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>